--- a/EDFM/src/tmp2/Makefile
+++ b/EDFM/src/tmp2/Makefile
@@ -33,12 +33,13 @@ EXEC=$(exe_sources:.cpp=)
 .phony= all clean distclean doc
 
 .DEFAULT_GOAL = all
-
+CXX=g++
+LINK.o=g++
 CPPFLAGS=-I. -I.. -I../../../external/include
 OPTFLAGS=-g
 CXXFLAGS=$(OPTFLAGS) -Wall -std=c++0x 
 LDFLAGS=$(OPTFLAGS)
-LDLIBS=-L../../lib -lCPgeom
+LDLIBS=-L../../lib -lCPgeom -Wl,-rpath=../../lib
 
 all: $(DEPEND) $(EXEC)
 
