Testing also projection on surfaces.

--- a/EDFM/src/tmp2/Makefile
+++ b/EDFM/src/tmp2/Makefile
@@ -62,7 +62,7 @@ $(DEPEND): $(SRCS)
 	g++ $(CPPFLAGS) -MM $(SRCS) -MF $(DEPEND)
 
 test_delaunay: ../delaunay.cpp ../geomPoint2D.cpp test_delaunay.cpp ../delaunay.hpp
-	g++ $(CXXFLAGS) $(CPPFLAGS) ../delaunay.cpp ../geomPoint2D.cpp -g test_delaunay.cpp -o test_delaunay
+	g++ -g $(CXXFLAGS) $(CPPFLAGS) test_delaunay.cpp ../delaunay.cpp ../geomPoint2D.cpp ../geomBilinearSurface.cpp   $(LDLIBS) -o test_delaunay
 -include $(DEPEND)
 
 
