--- a/EDFM/test/Makefile
+++ b/EDFM/test/Makefile
@@ -1,13 +1,13 @@
 CXX = g++
 WARFLAGS = -Wall
-OPTFLAGS = -O3 -DNDEBUG
-#OPTFLAGS = -g
+#OPTFLAGS = -O3 -DNDEBUG
+OPTFLAGS = -g
 #OPTFLAGS = -g 
 CPPFLAGS=
 # Use verbose for extra info
 #CPPFLAGS=-DVERBOSE
-OMPFLAGS = -fopenmp
-#OMPFLAGS = 
+#OMPFLAGS = -fopenmp
+OMPFLAGS = 
 CXXFLAGS = $(OPTFLAGS) $(WARFLAGS)  $(OMPFLAGS) $(CPPFLAGS) -I./../src -I../../external/include
 LDFLAGS= $(OPTFLAGS) -Wl,-rpath=$(PWD)/../lib -Wl,-rpath=$(PWD)/../../external/lib 
 LDLIBS=-L../external/lib -lqhull $(OMPFLAGS)
@@ -53,5 +53,5 @@ clean:
 	@rm -f *.o
 	@rm -f main_test
 
-run:
+run: main_test
 	./runtest.sh
