--- a/FVCode3D/CMakeLists.txt
+++ b/FVCode3D/CMakeLists.txt
@@ -13,7 +13,8 @@ IF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
 ENDIF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
 
-set(CMAKE_CXX_FLAGS "-std=c++11 -frounding-math -lumfpack" CACHE STRING "g++ Compiler Flags for All Builds" FORCE)
+set(CMAKE_CXX_FLAGS "-std=c++11 -frounding-math" CACHE STRING "g++ Compiler Flags for All Builds" FORCE)
+# /usr/local/suitesparse/lib/libumfpack.a
 
 # release and debug mode -Wno-deprecated
 set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DEIGEN_NO_DEBUG" CACHE STRING "g++ Compiler Flags for Release" FORCE)
@@ -63,7 +64,18 @@ set_target_properties(fvcode PROPERTIES "COMPILE_DEFINITIONS" TETLIBRARY)
 
 # Create executable and link libraries
 add_executable(fvcode.exe main.cpp )
-target_link_libraries(fvcode.exe fvcode tet)
+target_link_libraries(fvcode.exe fvcode tet
+#	lapack
+	/usr/local/suitesparse/lib/libumfpack.a
+	/usr/local/suitesparse/lib/libamd.a	
+	/usr/local/suitesparse/lib/libcholmod.a
+	/usr/local/suitesparse/lib/libcolamd.a
+	/usr/local/suitesparse/lib/libsuitesparseconfig.a
+#	/usr/local/suitesparse/lib/libbtf.a
+#	/usr/local/suitesparse/lib/libcamd.a
+#	/usr/local/suitesparse/lib/libccolamd.a
+	rt
+	)
 
 
 # Add subdirectories with examples
