Added tool to generate a Cartesian grid

--- a/FVCode3D/tools/CMakeLists.txt
+++ b/FVCode3D/tools/CMakeLists.txt
@@ -4,3 +4,4 @@ cmake_minimum_required(VERSION 2.8)
 # Add subdirectories with examples
 add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/converterToVTU)
 add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/converterToSolver)
+add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/cartGen)
