Personalize the cmake configuration
Conflicts:
    FVCode3D/CMakeLists.txt

--- a/FVCode3D/CMakeLists.txt
+++ b/FVCode3D/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Set the minimum required version of cmake for a project
 cmake_minimum_required(VERSION 2.8)
 # Project name
-project (FVCode)			
+project (FVCode)
 
 SET(CMAKE_VERBOSE_MAKEFILE TRUE CACHE BOOL "Verbose Makefile" FORCE)
 SET(CMAKE_COLOR_MAKEFILE TRUE CACHE BOOL "Colored Makefile" FORCE)
@@ -10,11 +10,16 @@ SET(CMAKE_COLOR_MAKEFILE TRUE CACHE BOOL "Colored Makefile" FORCE)
 
 # compiler stuff
 IF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
-	set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
+    set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
 ENDIF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
 
-set(CMAKE_CXX_FLAGS "-std=c++11 -frounding-math" CACHE STRING "g++ Compiler Flags for All Builds" FORCE)
-# /usr/local/suitesparse/lib/libumfpack.a
+IF(DEFINED ENV{IS_MOX})
+    SET( ADDITIONAL_CXX_FLAGS "-lumfpack" )
+ELSE()
+    SET( ADDITIONAL_CXX_FLAGS "" )
+ENDIF()
+
+set(CMAKE_CXX_FLAGS "-std=c++11 -frounding-math ${ADDITIONAL_CXX_FLAGS}" CACHE STRING "g++ Compiler Flags for All Builds" FORCE)
 
 # release and debug mode -Wno-deprecated
 set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DEIGEN_NO_DEBUG" CACHE STRING "g++ Compiler Flags for Release" FORCE)
@@ -33,7 +38,6 @@ find_path(EIGEN_PATH NAMES signature_of_eigen3_matrix_library PATHS /usr/local/i
 # Suitesparse path
 find_path(SUITESPARSE_PATH NAMES signature_of_suitesparse_matrix_library PATHS /usr/local/include/suitesparse DOC "Suitesparse Directory")
 
-
 # Make sure the compiler can find include files.
 include_directories (
             ${CMAKE_CURRENT_SOURCE_DIR}
@@ -51,32 +55,33 @@ link_directories (
             ${SUITESPARSE_PATH}/lib
          )
 
-
 # Create static library
 file(GLOB_RECURSE LIB_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*/*.cpp)
 file(GLOB_RECURSE LIB_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/*/*.hpp)
 add_library(fvcode STATIC ${LIB_SOURCES})
 
-#Set properties on a target. 
+#Set properties on a target.
 #We use this here to set -DTETLIBRARY for when compiling the library
 set_target_properties(fvcode PROPERTIES "COMPILE_DEFINITIONS" TETLIBRARY)
 
-
-# Create executable and link libraries
 add_executable(fvcode.exe main.cpp )
-target_link_libraries(fvcode.exe fvcode tet
-#	lapack
-	/usr/local/suitesparse/lib/libumfpack.a
-	/usr/local/suitesparse/lib/libamd.a	
-	/usr/local/suitesparse/lib/libcholmod.a
-	/usr/local/suitesparse/lib/libcolamd.a
-	/usr/local/suitesparse/lib/libsuitesparseconfig.a
-#	/usr/local/suitesparse/lib/libbtf.a
-#	/usr/local/suitesparse/lib/libcamd.a
-#	/usr/local/suitesparse/lib/libccolamd.a
-	rt
-	)
-
+# Create executable and link libraries
+IF(DEFINED ENV{IS_MOX})
+    target_link_libraries(fvcode.exe fvcode tet)
+ELSE()
+    target_link_libraries(fvcode.exe fvcode tet
+        #   lapack
+        /usr/local/suitesparse/lib/libumfpack.a
+        /usr/local/suitesparse/lib/libamd.a
+        /usr/local/suitesparse/lib/libcholmod.a
+        /usr/local/suitesparse/lib/libcolamd.a
+        /usr/local/suitesparse/lib/libsuitesparseconfig.a
+    #   /usr/local/suitesparse/lib/libbtf.a
+    #   /usr/local/suitesparse/lib/libcamd.a
+    #   /usr/local/suitesparse/lib/libccolamd.a
+        rt
+        )
+ENDIF()
 
 # Add subdirectories with examples
 # add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/tests)
@@ -88,37 +93,39 @@ add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/doc)
 # Add tools
 add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/tools)
 
-# Add test
-add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/test)
-
 # Install
 INSTALL(TARGETS fvcode.exe fvcode
-	RUNTIME DESTINATION ${INSTALL_BIN}
-	ARCHIVE DESTINATION ${INSTALL_LIBRARY}
-	LIBRARY DESTINATION ${INSTALL_LIBRARY}
-	)
+    RUNTIME DESTINATION ${INSTALL_BIN}
+    ARCHIVE DESTINATION ${INSTALL_LIBRARY}
+    LIBRARY DESTINATION ${INSTALL_LIBRARY}
+    )
 
 INSTALL(FILES ${LIB_HEADERS} DESTINATION ${INSTALL_INCLUDE})
 
 
 # Add data file
 add_custom_command(
-	TARGET fvcode.exe POST_BUILD        		# Adds a post-build event to fvcode.exe
-	
-	COMMAND ${CMAKE_COMMAND} -E copy	  	# which executes "cmake - E copy..."
-	${PROJECT_SOURCE_DIR}/data.txt     		# <--this is in-file
-	${PROJECT_BINARY_DIR}/data.txt			# <--this is out-file path
-	
-	COMMAND ${CMAKE_COMMAND} -E copy	  	# which executes "cmake - E copy_if_different..."
-	${PROJECT_SOURCE_DIR}/README			# <--this is in-file
-	${PROJECT_BINARY_DIR}/README			# <--this is out-file path
+    TARGET fvcode.exe POST_BUILD                # Adds a post-build event to fvcode.exe
 
-        COMMAND ln -sf
-        "${PROJECT_SOURCE_DIR}/data"
-        "${PROJECT_BINARY_DIR}"
-	
-#	COMMAND ${CMAKE_COMMAND} -E make_directory data
+#    COMMAND ${CMAKE_COMMAND} -E copy        # which executes "cmake - E copy..."
+    COMMAND ln -sf
+    ${PROJECT_SOURCE_DIR}/data.txt          # <--this is in-file
+    ${PROJECT_BINARY_DIR}/data.txt          # <--this is out-file path
 
-	COMMAND ${CMAKE_COMMAND} -E make_directory results
+    COMMAND ln -sf
+    ${PROJECT_SOURCE_DIR}/dataMSR.txt          # <--this is in-file
+    ${PROJECT_BINARY_DIR}/dataMSR.txt          # <--this is out-file path
 
-	)
+    COMMAND ${CMAKE_COMMAND} -E copy        # which executes "cmake - E copy_if_different..."
+    ${PROJECT_SOURCE_DIR}/README            # <--this is in-file
+    ${PROJECT_BINARY_DIR}/README            # <--this is out-file path
+
+    COMMAND ln -sf
+    "${PROJECT_SOURCE_DIR}/data"
+    "${PROJECT_BINARY_DIR}"
+
+#   COMMAND ${CMAKE_COMMAND} -E make_directory data
+
+    COMMAND ${CMAKE_COMMAND} -E make_directory results
+
+    )
