Fixed the searching of the Eigen path

--- a/FVCode3D/CMakeLists.txt
+++ b/FVCode3D/CMakeLists.txt
@@ -79,11 +79,13 @@ if(NOT UMFPACK_FOUND)
 endif()
 # Eigen
 set(CMAKE_PREFIX_PATH ${TPL_EIGEN_DIR})
-#find_package(Eigen3)
-#if(NOT EIGEN3_FOUND)
+find_package(Eigen3)
+if(NOT EIGEN3_FOUND)
     # We have our own
-    set(EIGEN3_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/eigen")
-#endif()# BLAS
+    #set(EIGEN3_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/eigen")
+    message(FATAL_ERROR "EIGEN not found. Try setting TPL_EIGEN_DIR to the installation path of EIGEN")
+endif()
+# BLAS
 set(CMAKE_MODULE_PATH ${ENV_CMAKE_MODULE_PATH})
 set(CMAKE_PREFIX_PATH ${TPL_BLAS_DIR})
 find_package(BLAS)
